--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "eslint:fix": "eslint --fix --ext js,jsx src"
   },
   "keywords": [],
   "author": "Maciej Biel",
