--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^3.2.0",
     "eslint": "^6.4.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^6.11.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
